[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemies/walker/Walker.gd" type="Script" id=1]
[ext_resource path="res://enemies/walker/Walker_SM.gd" type="Script" id=2]
[ext_resource path="res://enemies/blueprint/icon.png" type="Texture" id=3]
[ext_resource path="res://multiuse_resources/HealthSystem.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="Animation" id=2]
resource_name = "dead"

[sub_resource type="Animation" id=3]
resource_name = "hitted"

[sub_resource type="Animation" id=4]
resource_name = "idle"

[sub_resource type="Animation" id=5]
resource_name = "walk"

[node name="Walker" type="KinematicBody2D" groups=[
"walker",
]]
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="state_machine" type="Node" parent="."]
script = ExtResource( 2 )

[node name="visuals" type="Node2D" parent="."]

[node name="main_sprite" type="Sprite" parent="visuals"]
texture = ExtResource( 3 )

[node name="collition" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="raycasts_down" type="Node2D" parent="."]

[node name="raycast_left" type="RayCast2D" parent="raycasts_down"]
position = Vector2( -30, 32 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 3

[node name="raycast_right" type="RayCast2D" parent="raycasts_down"]
position = Vector2( 30, 32 )
enabled = true
cast_to = Vector2( 0, 2 )
collision_mask = 3

[node name="health_system" type="Node" parent="."]
script = ExtResource( 4 )

[node name="anim_enemy" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 2 )
anims/hitted = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="anim_damage" type="AnimationPlayer" parent="."]
